[website/bugfix] Fix docs scrollbar issue (#6034)
In #6029 I introduced a bug which caused scrollbars to show on
some browsers in some viewports.

https://github.com/open-policy-agent/opa/pull/6029/files#diff-3707717b9bfb9dd7c7ac1dddba9600c1798ebc1528b2539eeca40e034a824f8fR65

--- a/docs/website/assets/sass/custom.sass
+++ b/docs/website/assets/sass/custom.sass
@@ -61,8 +61,9 @@
   padding-bottom: 5rem
 
   &:not(.wide)
-    +widescreen
-      width: 75%
+    .hero, .content
+      +widescreen
+        max-width: 60rem
 
   .hero
     +touch
